--- a/shop.css
+++ b/shop.css
@@ -7,8 +7,8 @@ body{
     margin:0;
     padding:0;
     font-size:10px;
-    font-family:'Poppins',sans-serif;
-    background:white
+    font-family:Poppins,sans-serif;
+    background:white;
 }
 header{
     margin:0;
@@ -41,7 +41,7 @@ h3{
     font-weight: 400;
 }
 p{
-    font-size: 1rem;
+    font-size: 20px;
 }
 .mobile-logo,.nav-toggle{
  background:transparent;
@@ -101,239 +101,89 @@ p{
     justify-content: space-between;
 }
 /* ---------------------------main---------------------- */
-.box-wrap.intro{
-    margin: 0 auto;
-    margin-top:10rem;
-    margin-bottom: 5rem;
-     width: 90%;
+[data-tab-content]{
+    display: none;
 }
-.product-img{
-    width:  100%;
-    object-fit: cover;
-    object-position: center center;
+[data-tab-target]{
+    display: block;
 }
-.product-name,.product-status,.product-price{
-    margin-bottom: 1rem;
-}
-.product-name{
-    font-size:1.5rem;
-}
-.product-status{
-    color:#a19e9e;
-    font-size:0.8rem;
-    letter-spacing: 0.3rem;
-}
-.product-price{
-    font-size:1.7em;
-    letter-spacing: 0.3rem;
-    margin-bottom:3rem
-}
-.contact-btn{
-    margin-top:2rem;
-    width: 100%;
-    padding:1rem;
-    text-align: center;
-    background-color:black;
-    color: white;
-    font-size: 1rem;
-}
-.box-wrap.script{
-    height: auto;
-    width:90%;
-    margin:0 auto;
-}
-.box-content>h2{
-   margin-top:2rem
-}
-.img-1{
-    width: 100%;
-    aspect-ratio: 1/1;
-    object-fit: center;
-    object-position: center center;
-}
-/* ---------------------------------------------------- */
 
-/* --------------footer---------------- */
-.recommended-container{
-    position: relative;
-    margin-top:3rem;
-    width: 100%;
-    height:54rem;
-    text-align: center;
-    letter-spacing: 0.3rem;
-    background:#b4b3b3;
+.active{
+    display: block;
+}
+main{
+    margin-top:7rem;
  
 }
-.recommend-cotainer>h2{
-    
-    color:black;
-    font-weight: 400;
-    font-size:2rem
-}
-.box-wrap-recommneded{
-    position: absolute;
-    top:10rem;
+.sidebar-left{
     margin:0 auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 100%;
-    height: 43.2rem;
-}
-
-ul {
-	padding: 0;
-}
-
-li {
-	list-style: none;
-}
-
-
-.wrapper {
-    margin-top:5rem;
-    height: 100%;
-	position: relative;
-}
-	
-
-.items {
-	position: relative;
-	width: 100%;
-	overflow: hidden;
-	white-space: nowrap;
-	font-size: 0;
-	cursor: pointer;
-	
-	
-}
-.item.active {
-    cursor: grab;
-}
-.item {
-    width: 70%;	
-        padding-bottom:80%;
-    position: relative;
-	display: inline-block;
-	margin-left: 2rem;
-	background: white;
-	border:1px solid black;
-}
-.item>img{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    left: 0;
-    top:0
-}
-
-.item:first-child{
-    margin-left:3rem;
-}
-.item:last-child {
-    margin-right: 2rem;
-}
-
-.footer{
-    width: 100%;
-    height: 55rem;
-    background:black;
-    color:white;
+    width: 95%;
     display: flex;
     flex-direction: column;
     align-items: center;
-
+    justify-content: space-between;
+    margin-bottom:4rem;
+    border-bottom: 1px solid black;
+    
 }
-.main-menu-footer,.social-footer,.service-footer{
-    width: 90%;
-    margin-bottom:4rem
+.gallery-container{ 
+    margin:0 auto;
+  width: 95%;
+  display:flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
 }
-.footer-line{
+.product-container{
+    margin:0 auto;
+    flex-basis: 90%;
+    margin-bottom:3rem;
+}
+.img-container{
+    border:1px solid black;
+    width:100%;
+    position: relative;
+    padding-bottom:120%;
+}
+.img-product{
+    position: absolute;
+    top:0;
+    left:0;
+    height: 100%;
     width: 100%;
-    height: 1px;
-    background:white;
+    object-fit: cover;
+    object-position: center center;
 }
-h2{
-    font-size:1.3rem
-}
-h3{
-    font-size:1.3rem;
-    font-weight: 400;
-}
-.main-menu-footer>a{
-    display: block;
-    margin-top:1.5rem
-}
-.main-menu-footer>a{
-    color:white;
+.product-name,.img-price{
+    width: 50%;
     font-size:1rem;
-    margin-bottom:0.5rem;
 }
-input[type="email"]{
-    width: 100%;
-    height: 3rem;
-    font-size: 1.5rem;
-    margin-bottom:2rem
+.product-name{
+    float: left;
+    text-align: start;
 }
-.icon-insta{
-    width:58px;
-    height: 58px;
-  
+.img-price{
+    float: right;
+    text-align: end;
 }
+/* ---------------------------------------------------- */
 
-.footer-btn{
-    width: 60%;
-    padding:1rem;
-    background:white;
-    color:black;
-    text-align: center;
-    font-size:1.5rem
-}
-
-
-@media screen and (min-width: 500px) {
-     
-    .item {
-		width: 80%;	
-        padding-bottom:90%;
-	}
-}
-
-@media screen and (min-width: 600px) {
-
-	.item {
-		width: 70%;	
-        padding-bottom:75%;
-	}
-}
-
-@media screen and (min-width: 700px) {
-	.item:first-child{
-        margin-left:10rem;
+@media (min-width:560px){
+    .main-container{
+        width: 100%;
+        margin:0 auto;
+    
     }
-
-	.item {
-		width: 50%;	
-        padding-bottom:54%;
-	}
+    .product-container{
+        margin:0;
+        margin-bottom:3rem;
+         flex-basis: 43.71257485%;/* 365px/835px */
+    }
 }
-@media screen and (min-width: 800px) {
-	
-
-	.item {
-		width: 40%;	
-        padding-bottom:44%;
-	}
-}
-@media screen and (min-width: 900px) {
-	
-
-	.item {
-        width: 30%;
-        padding-bottom:33%;
-	}
-}
-@media screen and (min-width:770px){
+@media (min-width:770px){
+    h1{
+        font-size: 25px;
+        font-weight: 500;
+    }
     p{
         font-size:1rem
     }
@@ -343,7 +193,9 @@ input[type="email"]{
     .nav-logo,.link-lap-item{
         display:inline-block
     }
-
+    .link-lap-item a{
+        color:black ;
+    }
     .nav-logo{
         margin:0 5rem;
         width:80px;
@@ -358,73 +210,44 @@ input[type="email"]{
       position: fixed;
       width:100%;
       height:100px;
-      background-color: white;
+      background-color:white;
       display: flex;
       justify-content: space-around;
       align-items: center;
   }
-  .box-wrap.intro{
-      margin-top:10rem;
-      display: flex;
+  main{
+      margin-top:8rem;
+  }
+.sidebar-left{
+    position: fixed;
+    left:4rem;
+    top:8.5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 20vw;
+    height: calc(55vh - 100px);
+    border: 0px;
+    
 }
-.product-img{
-    margin-right:2rem;
-    order: -1;
-    width: 40.36458333%;/*465px/1152px */
-}
-.box-product-info{
-    width: 57.03125%;  /*657px/1152px */
-    height: 70%;
- }
- .box-wrap.script{
-     width: 96.875%; /*1240px/1280px */
-     height: auto;
-     margin-left: 3.125%;
-     display: flex;
- }
-
- .img-1{
- order: 1;
- width:  51.61290323%;
- height: 100%;
- }
- .box-content{
-      flex-basis: 34.27419355%;/*425px/1240px */
-      margin-right: 10rem;
- }
-.contact-btn{
-
-    width: 50vw;
-}
+.main-container{
+    position: relative;
+    left:calc(20vw + 7rem);
+     width:65.234375vw;/*835px/1280px */
+     margin:0px;
 
 }
-@media (min-width:1190px) {
-  .contact-btn{
-      width: 70%;
-  }   
-  .product-img{
-    margin-right:8rem;
+.product-container{
+     flex-basis: 43.71257485%;/* 365px/835px */
 }
+}
+@media (min-width:900px) {
+    h1{
+        font-size: 30px;
+    }
 }
 @media (min-width:1024px) {
-
-     .footer{
-         height: 25rem;
-         flex-direction:row;
-         justify-content: space-around;
-         align-items: flex-start
-         ;
-     }
-     .main-menu-footer,.social-footer{
-         width: 25%;
-         margin:0;
-
-         
-     }
-     .service-footer{
-        width: 40%;
-        margin:0;
-     }
-     
-    
+    h1{
+        font-size:35px;
+    }
 }
