--- a/product.css
+++ b/product.css
@@ -83,7 +83,6 @@ p{
     align-items: center;
 }
 .sidebar{
-  z-index:3;
   position: fixed;
   top:5rem;
   background:#EFEFEF;
@@ -137,6 +136,12 @@ p{
     background-color:black;
     color: white;
     font-size: 1rem;
+    transition: 0.3s;
+}
+.contact-btn:hover{
+    background-color: white;
+    color: black;
+    border:1px solid black
 }
 .box-wrap.script{
     height: auto;
@@ -218,6 +223,7 @@ li {
 	display: inline-block;
 	margin-left: 2rem;
 	background: white;
+	border:1px solid black;
 }
 .item>img{
     position: absolute;
@@ -287,7 +293,13 @@ input[type="email"]{
     background:white;
     color:black;
     text-align: center;
-    font-size:1.5rem
+    font-size:1.5rem;
+    transition: 0.3s;
+}
+.footer-btn:hover{
+    background-color: black;
+    color:white;
+    border:1px solid white
 }
 
 
